--- a/index.html
+++ b/index.html
@@ -5,9 +5,84 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Meu HTML</title>
+  <style>
+    body {
+      font-family: sans-serif;
+    }
+
+    table {
+      border-collapse: collapse;
+      width: 100%;
+    }
+   table td, table th {
+    border: 1px solid #ccc;
+    padding: 5px;
+    text-align: left;
+   }
+
+   table caption {
+      caption-side: bottom;
+      text-align: right;
+      font-style: italic;
+      font-size: 14px;
+      margin: 5px 0;
+   }
+
+   tfoot td, table th{
+    background: #ddd
+   }
+
+   tfoot td {
+    font-style: italic;
+   }
+
+   .responsive-table{
+    max-width: 100%;
+    overflow-x: auto;
+   }
+
+  </style>
  </head>
 <body>
- <h1>Cabeçalho</h1>
-  <p>loren </p>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+<div class="responsive-table">  
+  <table>
+    <caption>Uma descrição para tabela</caption>
+    <thead>
+      <tr>
+        <th>Titulo 1</th>
+        <th>Titulo 2</th>
+        <th>Titulo 3</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>Corpo 1</td>
+        <td>Corpo 2</td>
+        <td>Corpo 3</td>
+      </tr>
+      <tr>
+        <td colspan="2" row>AQUI</td>      
+        <td>Corpo 3</td>
+      </tr>
+      <tr>
+        <td>Corpo 1</td>
+        <td>Corpo 2</td>
+        <td>Corpo 3</td>
+      </tr>
+    </tbody>
+    <tfoot>
+      <tr>
+        <td colspan="2" rowspan="2"></td>
+        <td rowspan="">TOTAL: </td>
+      </tr>
+      <tr>
+        <td>
+          R$ 555,00
+        </td>
+      </tr>    
+    </tfoot>
+  </table>
+</div>
 </body>
 </html>
